update mini project 2

--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-center justify-content-lg-start">
     <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 mb-md-0">
-        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-decoration-none">Trendy-Threads</a>
+        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-decoration-none text-white">Trendy-Threads</a>
         <li class="nav-item"><a class="nav-link text-white" href="/">Home</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="/about.html">About Us</a></li>
         <li class="nav-item dropdown">
@@ -12,7 +12,7 @@
         <li class="nav-item"><a class="nav-link text-white" href="/contact.html">Contact</a></li>
     </ul>
     <div class="text-end">
-        <a  class="nav-link text-white" href="/cart.html"><i class="bi bi-cart"><span class="badge bg-primary ms-2">3</span></i></a>
+        <a  class="nav-link text-white" href="/cart.html"><i class="bi bi-cart"><span class="cartCount badge bg-primary ms-2"></span></i></a>
         <a class="nav-link text-white" href="/wishlist.html"><i class="bi bi-bookmark"></i></a>
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 mb-md-0 accountNav"></ul>
     </div>
