--- a/css/styles.css
+++ b/css/styles.css
@@ -80,3 +80,13 @@ a :visited {
 .product :hover > .info {
   opacity: 1;
 }
+
+.cartDisplay div {
+  width: 75%;
+}
+.cartDisplay div h6 {
+  text-align: left;
+}
+.cartDisplay img {
+  margin-right: 1rem;
+}
