--- a/css/sass/styles.scss
+++ b/css/sass/styles.scss
@@ -86,14 +86,14 @@ a {
     }
 }
 
-.cartDisplay {
-    div {
-    width: 75%;
-    h6 {
-        text-align: left;
-    }
-}
-img {
-    margin-right: 1rem;
-}
-}
+// .cartDisplay {
+//     div {
+//     width: 75%;
+//     h6 {
+//         text-align: left;
+//     }
+// }
+// img {
+//     margin-right: 0 1rem;
+// }
+// }
