--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-center justify-content-lg-start">
     <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 mb-md-0">
-        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-decoration-none text-white">Trendy-Threads</a>
+        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-decoration-none text-white" style="font-family: 'Pacifico', sans-serif; font-size: 30px;">Trendy-Threads</a>
         <li class="nav-item"><a class="nav-link text-white" href="/">Home</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="/about.html">About Us</a></li>
         <li class="nav-item dropdown">
